_generated-doc/2.13/config/quarkus-smallrye-health-small-rye-health-config.adoc

:summaryTableId: quarkus-smallrye-health-small-rye-health-config
[.configuration-legend]
icon:lock[title=Fixed at build time] Configuration property fixed at build time - All other configuration properties are overridable at runtime
[.configuration-reference, cols="80,.^10,.^10"]
|===

h|[[quarkus-smallrye-health-small-rye-health-config_configuration]]link:#quarkus-smallrye-health-small-rye-health-config_configuration[Configuration property]

h|Type
h|Default

a|icon:lock[title=Fixed at build time] [[quarkus-smallrye-health-small-rye-health-config_quarkus.smallrye-health.root-path]]`link:#quarkus-smallrye-health-small-rye-health-config_quarkus.smallrye-health.root-path[quarkus.smallrye-health.root-path]`

[.description]
--
Root path for health-checking endpoints. By default, this value will be resolved as a path relative to `$++{++quarkus.http.non-application-root-path++}++`.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_SMALLRYE_HEALTH_ROOT_PATH+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_SMALLRYE_HEALTH_ROOT_PATH+++`
endif::add-copy-button-to-env-var[]
--|string 
|`health`


a|icon:lock[title=Fixed at build time] [[quarkus-smallrye-health-small-rye-health-config_quarkus.smallrye-health.liveness-path]]`link:#quarkus-smallrye-health-small-rye-health-config_quarkus.smallrye-health.liveness-path[quarkus.smallrye-health.liveness-path]`

[.description]
--
The relative path of the liveness health-checking endpoint. By default, this value will be resolved as a path relative to `$++{++quarkus.smallrye-health.rootPath++}++`.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_SMALLRYE_HEALTH_LIVENESS_PATH+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_SMALLRYE_HEALTH_LIVENESS_PATH+++`
endif::add-copy-button-to-env-var[]
--|string 
|`live`


a|icon:lock[title=Fixed at build time] [[quarkus-smallrye-health-small-rye-health-config_quarkus.smallrye-health.readiness-path]]`link:#quarkus-smallrye-health-small-rye-health-config_quarkus.smallrye-health.readiness-path[quarkus.smallrye-health.readiness-path]`

[.description]
--
The relative path of the readiness health-checking endpoint. By default, this value will be resolved as a path relative to `$++{++quarkus.smallrye-health.rootPath++}++`.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_SMALLRYE_HEALTH_READINESS_PATH+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_SMALLRYE_HEALTH_READINESS_PATH+++`
endif::add-copy-button-to-env-var[]
--|string 
|`ready`


a|icon:lock[title=Fixed at build time] [[quarkus-smallrye-health-small-rye-health-config_quarkus.smallrye-health.group-path]]`link:#quarkus-smallrye-health-small-rye-health-config_quarkus.smallrye-health.group-path[quarkus.smallrye-health.group-path]`

[.description]
--
The relative path of the health group endpoint. By default, this value will be resolved as a path relative to `$++{++quarkus.smallrye-health.rootPath++}++`.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_SMALLRYE_HEALTH_GROUP_PATH+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_SMALLRYE_HEALTH_GROUP_PATH+++`
endif::add-copy-button-to-env-var[]
--|string 
|`group`


a|icon:lock[title=Fixed at build time] [[quarkus-smallrye-health-small-rye-health-config_quarkus.smallrye-health.wellness-path]]`link:#quarkus-smallrye-health-small-rye-health-config_quarkus.smallrye-health.wellness-path[quarkus.smallrye-health.wellness-path]`

[.description]
--
The relative path of the wellness health-checking endpoint. By default, this value will be resolved as a path relative to `$++{++quarkus.smallrye-health.rootPath++}++`.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_SMALLRYE_HEALTH_WELLNESS_PATH+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_SMALLRYE_HEALTH_WELLNESS_PATH+++`
endif::add-copy-button-to-env-var[]
--|string 
|`well`


a|icon:lock[title=Fixed at build time] [[quarkus-smallrye-health-small-rye-health-config_quarkus.smallrye-health.startup-path]]`link:#quarkus-smallrye-health-small-rye-health-config_quarkus.smallrye-health.startup-path[quarkus.smallrye-health.startup-path]`

[.description]
--
The relative path of the startup health-checking endpoint. By default, this value will be resolved as a path relative to `$++{++quarkus.smallrye-health.rootPath++}++`.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_SMALLRYE_HEALTH_STARTUP_PATH+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_SMALLRYE_HEALTH_STARTUP_PATH+++`
endif::add-copy-button-to-env-var[]
--|string 
|`started`


a|icon:lock[title=Fixed at build time] [[quarkus-smallrye-health-small-rye-health-config_quarkus.smallrye-health.context-propagation]]`link:#quarkus-smallrye-health-small-rye-health-config_quarkus.smallrye-health.context-propagation[quarkus.smallrye-health.context-propagation]`

[.description]
--
Whether the context should be propagated to each health check invocation.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_SMALLRYE_HEALTH_CONTEXT_PROPAGATION+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_SMALLRYE_HEALTH_CONTEXT_PROPAGATION+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|`false`


a|icon:lock[title=Fixed at build time] [[quarkus-smallrye-health-small-rye-health-config_quarkus.smallrye-health.max-group-registries-count]]`link:#quarkus-smallrye-health-small-rye-health-config_quarkus.smallrye-health.max-group-registries-count[quarkus.smallrye-health.max-group-registries-count]`

[.description]
--
The number of the maximum health groups that can be created.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_SMALLRYE_HEALTH_MAX_GROUP_REGISTRIES_COUNT+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_SMALLRYE_HEALTH_MAX_GROUP_REGISTRIES_COUNT+++`
endif::add-copy-button-to-env-var[]
--|int 
|


h|[[quarkus-smallrye-health-small-rye-health-config_quarkus.smallrye-health.ui-smallrye-health-ui-configuration]]link:#quarkus-smallrye-health-small-rye-health-config_quarkus.smallrye-health.ui-smallrye-health-ui-configuration[SmallRye Health UI configuration]

h|Type
h|Default

a|icon:lock[title=Fixed at build time] [[quarkus-smallrye-health-small-rye-health-config_quarkus.smallrye-health.ui.root-path]]`link:#quarkus-smallrye-health-small-rye-health-config_quarkus.smallrye-health.ui.root-path[quarkus.smallrye-health.ui.root-path]`

[.description]
--
The path where Health UI is available. The value `/` is not allowed as it blocks the application from serving anything else. By default, this value will be resolved as a path relative to `$++{++quarkus.http.non-application-root-path++}++`.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_SMALLRYE_HEALTH_UI_ROOT_PATH+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_SMALLRYE_HEALTH_UI_ROOT_PATH+++`
endif::add-copy-button-to-env-var[]
--|string 
|`health-ui`


a|icon:lock[title=Fixed at build time] [[quarkus-smallrye-health-small-rye-health-config_quarkus.smallrye-health.ui.always-include]]`link:#quarkus-smallrye-health-small-rye-health-config_quarkus.smallrye-health.ui.always-include[quarkus.smallrye-health.ui.always-include]`

[.description]
--
Always include the UI. By default, this will only be included in dev and test. Setting this to true will also include the UI in Prod

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_SMALLRYE_HEALTH_UI_ALWAYS_INCLUDE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_SMALLRYE_HEALTH_UI_ALWAYS_INCLUDE+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|`false`

|===